<resources>
	<string name="app_name">Finite</string>
	<string name="app_name_stylised">finite</string>

	<string name="action_settings">Settings</string>

	<string name="action_restore">Restore</string>
	<string name="action_cancel">Cancel</string>

	<string name="editor_action_save">Save subscription</string>

	<string name="editor_name">Name</string>
	<string name="editor_description">Short description</string>
	<string name="editor_started_on">Started on</string>
	<string name="editor_frequency">Frequency</string>
	<string name="editor_payment_method">Payment method</string>
	<string name="editor_notes">Notes</string>

	<string name="period_weekly">Weekly</string>
	<string name="period_2weeks">Every 2 weeks</string>
	<string name="period_monthly">Monthly</string>
	<string name="period_quarterly">Quarterly</string>
	<string name="period_6months">Every 6 months</string>
	<string name="period_yearly">Yearly</string>

	<string name="title_view_options">Display options</string>
	<string name="option_show_time_left">Time until next payment</string>
	<string name="option_show_roughly_sign">Roughly ‘≈’ sign next to converted prices</string>
	<string name="option_header_sort">Sort</string>
	<string name="option_sort_name">Name</string>
	<string name="option_sort_price">Price</string>
	<string name="option_sort_date">Next billing date</string>
	<string name="option_header_filter">Filter by payment method</string>


	<string name="setting_default_currency">Default currency</string>
	<string name="setting_theme">Theme</string>
	<string name="setting_theme_follow_system">Follow system</string>
	<string name="setting_theme_light">Light</string>
	<string name="setting_theme_dark">Dark</string>
	<string name="setting_harmonize">Harmonise colours</string>
	<string name="setting_harmonize_description">Slightly adjust hue of subscription colours so they better match the theme of your device and You</string>
	<string name="setting_normalise">Normalise colours</string>
	<string name="setting_normalise_description">Make subscription colours the same tone so they are more consistent and match light or dark theme</string>

	<string name="setting_colors_title">Colours</string>
	<string name="colors_brightness_lower">Lower brightness</string>
	<string name="colors_brightness_higher">Higher brightness</string>

	<string name="setting_backup_title">Backup</string>
	<string name="setting_backup_cloud_title">Cloud backup</string>
	<string name="setting_create_backup_cloud">Backup now</string>
	<string name="setting_restore_backup_cloud">Restore</string>
	<string name="setting_backup_local_title">Manual backup</string>
	<string name="setting_create_backup_local">Create</string>
	<string name="setting_restore_backup_local">Restore</string>
	<string name="dialog_restore_title">Restore backup?</string>
	<string name="dialog_restore_created_on">Created on %1$s</string>
	<string name="dialog_restore_replace_subscriptions">Replace my subscriptions</string>

	<string name="setting_rates_title">Rates</string>

	<string name="snackbar_invalid_file">The selected file is an invalid backup file</string>

	<string name="snackbar_backup_failure">Couldn\'t create backup: %1$s</string>
	<string name="snackbar_backup_success">Backup created successfully</string>

	<string name="snackbar_restore_failure">Couldn\'t restore backup: %1$s</string>
	<string name="snackbar_restore_success">Backup restored successfully</string>

	<string name="lorem_ipsum">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
		volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
		dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
		litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
		diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
		ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
		Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
		egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
		neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
		fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
		molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
		bibendum, vel congue leo egestas.\n\n
		Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
		amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
		molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
		interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
		lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
		in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
		est.\n\n
		Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
		Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
		non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
		eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
		quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
		ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
		placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
		convallis.\n\n
		Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
		malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
		gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
		libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
		sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
		libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
		vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
	</string>


	<string name="reminders_remind_me">Remind me</string>
	<string name="reminders_time">Time</string>
	<string name="reminders_error_period_too_long">Reminder period should be shorter than a single billing cycle</string>

</resources>